fixed alignment

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,8 @@
 html {
   box-sizing: border-box;
-  font-family: Roboto, sans-serif;
+  font: normal 100%/1.5 Roboto, sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 *, *::before, *::after {
@@ -8,14 +10,75 @@ html {
 }
 
 h2 {
-  font-family: Roboto-Condensed, sans-serif;
   font-size: 3rem;
+  line-height: 1.25;
+  font-family: Roboto Condensed;
   font-weight: bold;
+  margin: 0;
+  padding: 0;
+  max-width: 80%;
+}
+
+p {
+  font-size: 1.5rem;
+  margin-top: 0;
 }
 
 .img-flex {
-  position: relative;
+  display: block;
   width: 100%;
-  max-height: 500px;
+}
 
+body {
+  margin: 0;
+}
+
+.banner {
+  position: relative;
+  max-height: 500px;
+}
+
+.banner-content {
+  max-width: 75%;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  top: 110px;
+  max-height: 500px;
+  overflow: hidden;
+  display: inline-block;
+
+}
+
+.text {
+  width: 60%;
+  overflow: hidden;
+  float: right;
+}
+
+.circle {
+  float: left;
+  padding: 5px 10px;
+  width: 35%;
+}
+
+
+.btn {
+  display: inline-block;
+  padding: 0.4em 0.75em 0.3em;
+  background-color: #333;
+  border-radius: 8px;
+  border: 3px solid #333;
+  color: #fff;
+  text-decoration: none;
+  font-size: 1.125rem;
+}
+
+.btn-big {
+  font-size: 1.5rem;
+}
+
+.btn:hover {
+  background-color: #000;
+  border-color: #000;
 }
